# projeto-computacao-grafica

./: .gitignore  CMakeLists.txt  Math3.cpp  Shader.h
Shaders/: BufferA.fs  Image.frag  Image.fs  Image_old.frag
